Correct zindex scrollbar indicator

--- a/styles/globals.module.scss
+++ b/styles/globals.module.scss
@@ -58,6 +58,7 @@
     background-color: #000000;
     border-radius: 150px;
     position: fixed;
+    z-index: 1;
     overflow: hidden;
     left: 5%;
     bottom: 5%;
